# Multi-Vapp

./: .gitignore  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  io.cpp  signature.cpp
app/src/main/cpp/lspc/: CMakeLists.txt
app/src/main/java/axml/xml/: AxmlUtils.java  Chunk.java  Resources.java
app/src/main/java/com/crack/vapp/: BaseApplication.java
app/src/main/java/com/crack/vapp/core/: Begin.java  BypassSignature.java  EnableActivity.java  EnableBroadcastReceiver.java  EnableContentProvider.java  EnableDex.java  EnableResource.java  EnableService.java  InstallApp.java  LunchApp.java  RedirectIO.java
app/src/main/java/com/crack/vapp/proxy/: ProxyActivity.java  ProxyService.java
app/src/main/java/com/crack/vapp/ui/: AddAppActivity.java  AddAppAdapter.java  HomeActivity.java  HomeAppAdapter.java
app/src/main/java/com/crack/vapp/utils/: AndroidManifestParser.java  AppInfoUtils.java  FileUtils.java  Log.java  PackageParser.java  ReflectUtils.java
app/src/main/res/drawable/: button_border.xml
app/src/main/res/layout/: activity_home.xml  activity_main.xml  item_app_add.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
